# Kine-Helper

./: .env  .gitignore  .prettierrc  README.md  jsconfig.json  kinehelper.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: main.yml
.svelte-kit/: ambient.d.ts
src/: app.css  app.html  hooks.client.js
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: android.json  default.json  documentaccess.json  ios.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: database_migrations.rs  lib.rs  main.rs  nomenclature.rs
src-tauri/src/apple_api/: mod.rs  state.rs
src-tauri/src/apple_api/image_capture_core/: browser_delegate.rs  mod.rs  scanner_delegate.rs
src-tauri/src/apple_api/image_capture_core/ImageCaptureCore/: ICDevice.rs  ICDeviceBrowser.rs  ICScannerBandData.rs  ICScannerDevice.rs  ICScannerFunctionalUnits.rs  ImageCaptureConstants.rs  mod.rs
src-tauri/src/appstate/: mod.rs  serializers.rs
src-tauri/src/cloud/: image_compression.rs  jobs.rs  mod.rs  postgrest.rs  queue.rs  state.rs
src-tauri/src/cryptage/: mod.rs
src-tauri/src/eid_reader/: eid_reader_resources.rs  get_card.rs  mod.rs  read_data.rs  signature.rs
src-tauri/src/migrations/: 20231204175351_conventions.up.sql  20240220173643_mutuelle_paid_attestation.up.sql  20240220193637_docType.up.sql  20240305190432_renamepatient.up.sql  20240307202642_typo2.up.sql  20240309173246_kine.up.sql  20240318145714_9pin.up.sql  20240321080003_sp_with_group.up.sql  20240906062350_rename_patients_kine_id.up.sql  20250119121051_cloud.up.sql  20250119121051_tarifs_et_supplement.up.sql  20250216165021_appareils.up.sql  20250216165602_refonte_documents.up.sql  20250216165602_tarifs_metadata.up.sql  20250217165602_refonte_documents.up.sql  20250225195209_sp_amb_hos.up.sql  20250306133523_seance_completion.up.sql  20250316133523_migrate_data_and_document_refonte.up.sql  20250325133523_kv_store.up.sql  20250406133523_history_nodes.up.sql  20250421133523_prescription_file_name.up.sql  20250530133523_prescription_deja_faites.up.sql  20250530133523_seance_payment.up.sql  20250815133523_added_settings_and_i18n.up.sql  20250815133523_added_ssin_for_kine.up.sql  20250915133523_added_organization_id_to_business_table.up.sql  20250925133523_added_user_id_to_factures_attestations.up.sql  Poursuite_documents.sql  ideas for cloud.sql
src-tauri/src/printer/: escp.rs  form_data_modeling.rs  mod.rs
src-tauri/src/printer/escp_new/: document_builder.rs  escp_commands.rs  mod.rs
src-tauri/src/printer/pdf_printer/: mod.rs  unix.rs  windows.rs
src-tauri/src/printer/raw_printer/: mod.rs  unix.rs  windows.rs
src-tauri/src/setup_functions/: commons.rs  desktop.rs  mobile.rs  mod.rs  on_exit.rs  state_setup.rs
src-tauri/src/stability_corrections/: file_system_correction.rs  macos_hardened_runtime_fs_correction.rs  mod.rs
src-tauri/src/windows_api/: mod.rs  scanner_api.rs
src/lib/: EventCalendar.svelte  SidebarMenu.svelte  TarificationComponent.svelte  index.js  supabaseClient.js
src/lib/agenda/: AgendaSideBar.svelte  TodaysAppointments.svelte
src/lib/assets/: admin.avif  kine.avif  logo head.avif  logo.avif  owner.avif  secretaire.avif
src/lib/calendar-vkurko/: fr-locale.js
src/lib/calendar-vkurko/timeGrid/: Body.svelte  View.svelte
src/lib/cloud/: User.js  database.js  errors.js  historyNode.js  synchronisation.js
src/lib/components/: BoutonPrincipal.svelte  BoutonPrincipalAvecIcone.svelte  BoutonSecondaireAvecIcone.svelte  Card.svelte  CardTable.svelte  Dropdown.svelte  DropdownItem.svelte  EmptyState.svelte  KBD.svelte  PageTitle.svelte  ProgressRadial.svelte  SectionTitle.svelte  SectionTitleWithTabs.svelte  SoftButton.svelte  TableWithCheckbox.svelte  Tabs.svelte
src/lib/forms/: AutocompleteField.svelte  CheckboxField.svelte  CheckboxesSetField.svelte  DefaultFieldWrapper.svelte  FormWrapper.svelte  RadioField.svelte  SelectField.svelte  TextField.svelte  index.js
src/lib/i18n/: fr.json  index.js
src/lib/managers/: AppState.svelte.js  CodeManager.js  ErrorManager.js  HistoryManager.svelte.js  PatientCache.svelte.js  types.js
src/lib/patient-detail/: Arborescence.svelte  Breadcrumbs.svelte  PatientCard.svelte  SPTitle.svelte  Title.svelte
src/lib/pdfs/: BetterKHPDFProducer.svelte.js  ListeEPDF.svelte.js  annexeA.js  annexeB.js  factureMutuelle.js  facturePatient.js  kineHelperPdfs.js  tinetti.js
src/lib/stores/: PatientStore.js  UserStore.js  appState.js  codeDetails.js  conventionInami.js  conventionStore.js  databaseInitializer.js  dateHelpers.js  encryption.js  encryption.test.js  m23.json  strongHold.js  supabaseClient.js  useConvention.js
src/lib/ui/: AttestationModal.svelte  BugReportModal.svelte  ButtonWithLoader.svelte  CalendarEventModal.svelte  CodeSelectionModal.svelte  DocumentSelectionModal.svelte  FactureBox.svelte  FactureCreationModal.svelte  MarketingModal.svelte  MultipleEventSelectionModal.svelte  PageTitle.svelte  PatientCard.svelte  SeanceCreationModal.svelte  toasts.js
src/lib/user-ops-handlers/: abstractHandler.js  attestations.js  dbAdapter.js  documents.js  models.js  patients.js  prescriptions.js  seances.js  settings.js  situations_pathologiques.js  users.js
src/lib/utils/: SituationsPathologique.js  calendarEventFormater.js  depenciesRelodingScripts.js  fsAccessor.js  manipulateurDeSeances.js  nomenclatureManager.js  platformwhoami.js  rawPrinting.js  shortcuts.js  validationGenerics.js
src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.js  +page.svelte
src/routes/account/: +page.svelte
src/routes/dashboard/: +error.svelte  +layout.js  +layout.svelte  +page.js  +page.svelte  page copy.svelte  page test calendar.svelte
src/routes/debug/: +layout.svelte
src/routes/merci/: +page.svelte
src/routes/post-signup-form/: +page.svelte
src/routes/post-signup-forms/: +page.svelte
src/routes/setup-language/: +page.svelte
src/routes/splashscreen/: +page.svelte
src/routes/test/: +page.svelte
(+425 files in other folders)
