[package]
name = "kine-helper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "kine_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-sql = { version = "2.0.0-rc.0", features = ["sqlite"] }
tauri-plugin-http = "2.0.0-rc.0"
zune-inflate = { version = "0.2", default-features = false, features = ["gzip"] }
tauri-plugin-fs = "2.0.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unidecode = "0.3.0"
aes-gcm = "0.10.3"
rand_core = "0.6"
tauri-plugin-process = "2.0.0-rc.0"
printers = "2.0.0"
base64 = "0.22.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"


# you can add the dependencies on the `[dependencies]` section if you do not target mobile
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-updater = "2.0.0-beta"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_SystemServices"
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
