[package]
name = "kine-helper"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "kine_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-http = "2.3.0"
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
] }
tauri-plugin-fs = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unidecode = "0.3.0"
aes-gcm = "0.10.3"
rand_core = "0.6"
tauri-plugin-process = "2.2.0"
printers = "2.1.2"
base64 = "0.22.1"
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4"
regex = "1.11.1"
tokio = "1.44.2"
image = "0.25.6"
futures-util = "0.3.31"
postgrest = "1.6.0"


# you can add the dependencies on the `[dependencies]` section if you do not target mobile
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.2.0"
pcsc = "2.9.0"
tauri-plugin-updater = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"
objc2-foundation = "0.3.0"
objc2-core-foundation = "0.3.0"
objc2-core-graphics = "0.3.0"
libc = "0.2.172"
block2 = "0.6.0"
dispatch2 = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Devices_Enumeration",
    "Devices_Scanners",
    "Storage",
    "Storage_Streams",
    "Foundation_Collections",
    "Storage_Search",
] }
winprint = { version = "0.2.0", features = ["pdfium"] }
