[package]
name = "kine-helper"
version = "1.0.12"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "kine_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-http = "=2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
tokio = "1.44.2"
futures-util = "0.3.31"
unidecode = "0.3.0"
aes-gcm = "0.10.3"
rand_core = "0.6"
base64 = "0.22.1"
regex = "1.11.1"
dirs = "6.0.0"
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
] }
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.2.1"
postgrest = "1.6.0"
ring = "0.17.14"
flate2 = "1.1.2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
printers = "2.1.2"
tauri-plugin-global-shortcut = "2.2.0"
pcsc = "2.9.0"
tauri-plugin-updater = "2.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"
objc2-foundation = "0.3.0"
objc2-core-foundation = "0.3.0"
objc2-core-graphics = "0.3.0"
libc = "0.2.172"
block2 = "0.6.0"
dispatch2 = "0.2.0"
# tauri-plugin-apple-camera = "0.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Devices_Enumeration",
    "Devices_Scanners",
    "Storage",
    "Storage_Streams",
    "Foundation_Collections",
    "Storage_Search",
] }
winprint = { version = "0.2.0", features = ["pdfium"] }

# [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# tauri-plugin-barcode-scanner = "2"

# [target.'cfg(target_os = "ios")'.dependencies]
# tauri-plugin-apple-camera = "0.1.0"
